--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   firebase_analytics: ^11.3.3
   firebase_messaging: ^15.1.3
   flutter_local_notifications: ^18.0.1
+  # Google Sign-In
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
@@ -70,3 +72,10 @@ flutter:
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
+flutter_launcher_icons:
+  android: "ic_launcher"
+  ios: true
+  image_path: "assets/appstore.png"
+  min_sdk_android: 21
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/appstore.png"
